# Prog2-Github

./: CMakeLists.txt  Projeto01.c  Projeto01.h  README.md  calc.c  calc.h  main.c  projeto02.c  projeto02.h  recursive.c  recursive.h  something.c  something.h
libprg/: CMakeLists.txt
libprg/src/include/libprg/: libprg.h
libprg/src/libprg/: avl.c  chain.c  doublechain.c  fila.c  lista.c  pillar.c  sortings.c  tree.c
